--- a/fire.html
+++ b/fire.html
@@ -49,10 +49,10 @@
         杨小美女
     </div>
     <div class="shape">
-        茫茫人海
+        young
     </div>
     <div class="shape">
-        相遇是缘
+        smile
     </div>
 </div>
 <!--音乐部分-->
