--- a/fire.html
+++ b/fire.html
@@ -44,7 +44,7 @@
 <img src="moon.png" alt="" id="moon" style="visibility: hidden;" />
 <div style="display:none">
     <div class="shape">
-        happy   </div>
+        开心   </div>
     <div class="shape">
         杨小美女
     </div>
